import("//brave/components/common/typescript.gni")

transpile_web_ui("transpile_settings") {  
  entry_points = [
    ["brave_rewards_internals", rebase_path("//brave/components/brave_rewards/resources/ui/internals/brave_rewards_internals.tsx")]
  ]

  resource_name = "brave_rewards_internals"
  output_dir = "$root_gen_dir/android-brave/web-ui-$resource_name"  
}
